# nifti-identify-axial

./: .gitignore  CHANGELOG.md  LICENSE  README.md  nifti-filter.py  nifti-identify-axial.py  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
docs/: CT-SERIES-CLASSIFICATION-RESEARCH.md
nifti_filter/: __init__.py  classifier.py  cli.py  file_ops.py  nifti_utils.py  scoring.py
specs/001-filter-axial-series/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-filter-axial-series/checklists/: requirements.md
specs/001-filter-axial-series/contracts/: cli-args.md
tests/: __init__.py  test_classifier.py  test_scoring.py
tests/fixtures/: axial_soft.json  bone.json  coronal.json  lung.json  mip.json
