[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nifti-filter"
dynamic = ["version"]
description = "CLI Python para filtrar séries NIfTI axiais de partes moles com cortes finos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "NIfTI Identify Axial Project" }
]
keywords = [
    "nifti",
    "dicom",
    "medical-imaging",
    "ct-scan",
    "radiology",
    "dcm2niix",
    "filtering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "nibabel>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/colliplanura/nifti-identify-axial"
Repository = "https://github.com/colliplanura/nifti-identify-axial"
Issues = "https://github.com/colliplanura/nifti-identify-axial/issues"

[project.scripts]
nifti-filter = "nifti_filter.cli:main"

[tool.hatch.version]
path = "nifti_filter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["nifti_filter"]

[tool.hatch.build.targets.sdist]
include = [
    "nifti_filter/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
